# CrystalLauncher

./: .env  .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  Layout.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/commands/: auth.rs  install.rs  instances.rs  launch.rs  mod.rs
src-tauri/src/core/: discord.rs  mod.rs
src-tauri/src/models/: fs.rs  instance.rs  mc.rs  mod.rs
src/lib/: types.ts
src/lib/components/: Header.svelte  OnlineCount.svelte  Skins.svelte
src/lib/helpers/: instances.ts  versions.ts
src/pages/: Install.svelte  Login.svelte  Play.svelte
