[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
rayon = "1.8"
mc_auth = "0.1.0"
tokio = { version = "1.49.0", features = ["full"] }
dotenvy = "0.15.7"
tauri-plugin-oauth = "2"
url = "2.5"   
sha1 = "0.10"   
hex = "0.4"
zip = "4.2.0"
